Adding demo area.

--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,13 @@
   </head>
   <body>
 
+    <div class="wrapper">
+      <h1>Learning three.js</h1>
+      <ul>
+        <li><a href="#">Rotating cube grid</a></li>
+      </ul>
+    </div>
+
     <script src="/bower_components/dat.gui/dat.gui.min.js"></script>
     <script src="/bower_components/three.js/three.min.js"></script>
     <script src="/bower_components/jquery/dist/jquery.js"></script>
