Simple menu to toggle through examples.

--- a/app/index.html
+++ b/app/index.html
@@ -14,13 +14,13 @@
   </head>
   <body>
 
-    <!-- <div class="wrapper">
+    <div class="wrapper">
       <h1>Learning three.js</h1>
       <ul>
-        <li><a href="#">Rotating cube grid</a></li>
-        <li><a href="#">Rotating prism grid</a></li>
+        <li><a href="#" class="rotating-cube-grid">Rotating cube grid</a></li>
+        <li><a href="#" class="rotating-prism-grid">Rotating prism grid</a></li>
       </ul>
-    </div> -->
+    </div>
 
     <script src="/bower_components/dat.gui/dat.gui.min.js"></script>
     <script src="/bower_components/three.js/three.min.js"></script>
