README.md updates and tidying current code.

--- a/app/index.html
+++ b/app/index.html
@@ -17,8 +17,14 @@
     <div class="wrapper">
       <h1>Learning three.js</h1>
       <ul>
-        <li><a href="#" class="rotating-cube-grid">Rotating cube grid</a></li>
-        <li><a href="#" class="rotating-prism-grid">Rotating prism grid</a></li>
+        <li>
+          <h2><a href="#" class="rotating-cube-grid">Rotating cube grid</a></h2>
+          <p>Box geometry, normal material, no lights.</p>
+        </li>
+        <li>
+          <h2><a href="#" class="rotating-prism-grid">Rotating prism grid</a></h2>
+          <p>Cylinder geometry, normal material, no lights.</p>
+        </li>
       </ul>
     </div>
 
