--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
 
-    <div class="wrapper">
+    <!-- <div class="wrapper">
       <h1>Learning three.js</h1>
       <ul>
         <li>
@@ -26,7 +26,7 @@
           <p>Cylinder geometry, normal material, no lights.</p>
         </li>
       </ul>
-    </div>
+    </div> -->
 
     <script src="/bower_components/dat.gui/dat.gui.min.js"></script>
     <script src="/bower_components/three.js/three.min.js"></script>
